# opxs-apps-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.batch-email-bounce  Dockerfile.batch-email-send  Dockerfile.batch-send-email  Dockerfile.batch-send-email-feedback  Dockerfile.build  Dockerfile.build.api  Dockerfile.build.batch  Dockerfile.build.batch-email-send  Dockerfile.build.batch-email-send-feedback  Dockerfile.build.batch-file-convert  Dockerfile.build.batch-image-convert  Dockerfile.run.api  Dockerfile.run.batch-email-send  Dockerfile.run.batch-email-send-feedback  Dockerfile.run.batch-file-convert  Dockerfile.run.batch-image-convert  Dockerfile.run.batch-send-email  Dockerfile.run.batch-send-email-feedback  Makefile.toml  README.md  build-api.sh  build-batch.sh  build.sbt  build.sh  compose.yml  deploy-api-dev.sh  deploy-batch-dev.sh  request.rest  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: build-and-deploy-dev.yml  publish-openapi.yml  test-slim.yml  test.yml  update-rust-toolchain.py  update-rust-toolchain.yml  update.py  update.yml
conf/: application.conf  dev.toml  local.toml  settings.toml
conf/migrations/: 00_create_tables.sql  00_users.sql  01_auth.sql  01_create_tables.sql  02_send_jobs.sql  03_file_convert_jobs.sql  03_image_convert_jobs.sql  init.sql
conf/test/: elasticmq.conf
docs/requirements/: requirements.puml
docs/specifications/: index.adoc
entrypoints/api/: .npmrc  Cargo.toml  Makefile.toml  openapi.yml  package-lock.json  package.json  redocly.yaml
entrypoints/batch-email-send/: Cargo.toml
entrypoints/batch-email-send-feedback/: Cargo.toml
entrypoints/batch-file-convert/: Cargo.toml  build.rs
entrypoints/batch-image-convert/: Cargo.toml
migrations/: 00_init.sql  01_create_tables.sql  init.sql
modules/api/: Cargo.toml
modules/api/src/: domain.rs  infra.rs  interface.rs  main.rs  provider.rs  service.rs  shared.rs
modules/api/src/common/: config.rs  errors.rs  service.rs  state.rs  world.rs
modules/api/src/domain/: auth.rs  convert_image.rs  health.rs  state.rs
modules/api/src/domain/auth/: common.rs  model.rs  repo.rs  service.rs
modules/api/src/domain/auth/common/: jwt.rs  kdf.rs
modules/api/src/domain/auth/email/: repo.rs  service.rs
modules/api/src/domain/auth/google/: oauth2.rs  repo.rs  service.rs
modules/api/src/domain/auth/repo/: email_auth.rs  provider_auth.rs  token.rs  user.rs
modules/api/src/domain/auth/service/: auth.rs  auth_service.rs  common.rs  encrypted_password.rs  google.rs  password_deriver.rs
modules/api/src/domain/auth/service/auth/: jwt.rs  kdf.rs
modules/api/src/domain/auth/service/common/: jwt.rs  kdf.rs  token.rs
modules/api/src/domain/auth/service/email/: service.rs
modules/api/src/domain/auth/service/google/: provider.rs  service.rs
modules/api/src/domain/auth/service/token/: service.rs
modules/api/src/domain/auth/service/user/: service.rs
modules/api/src/domain/auth/token/: repo.rs  service.rs
modules/api/src/domain/auth/user/: repo.rs  service.rs
modules/api/src/domain/convert_image/: message_exchanger.rs
modules/api/src/domain/health/: repo.rs  service.rs  test.rs
modules/api/src/domain/health/repo/: world.rs
modules/api/src/domain/model/: user.rs
modules/api/src/domain/repo/: user.rs
modules/api/src/domain/secret/: service.rs
modules/api/src/domain/secret/service/: secret_reader.rs
modules/api/src/domain/socket/: message_exchanger.rs
modules/api/src/infra/: auth.rs  secret.rs
modules/api/src/infra/auth/: email_auth.rs  postgres_auth_repo.rs  provider_auth.rs  refresh_token.rs  token.rs  user.rs
modules/api/src/infra/health/: world.rs
modules/api/src/infra/repo/: auth.rs  user.rs
modules/api/src/infra/secret/: aws_secret_reader.rs
modules/api/src/interface/: docs.rs  errors.rs  extractors.rs  handler.rs  routes.rs  runner.rs  server.rs  state.rs
modules/api/src/interface/routes/: auth.rs  health.rs  v1.rs
modules/api/src/interface/routes/auth/: email.rs  google.rs  token.rs
modules/api/src/main/: HttpServer.scala
modules/api/src/main/actors/: CounterActor.scala
modules/api/src/provider/: repo.rs  state.rs
modules/api/src/service/: email_send.rs  jwt.rs  kdf.rs
modules/api/src/service/email_send/: job_creator.rs  repo.rs
modules/api/src/shared/: config.rs  errors.rs  info.rs  service.rs  state.rs  world.rs
modules/api/src/usecase/: auth.rs
modules/api/tests/: health.rs
modules/auth/: Cargo.toml
modules/auth/src/: crypto.rs  error.rs  google.rs  lib.rs  model.rs  prelude.rs  provider.rs  shared.rs  user.rs
modules/auth/src/crypto/: jwt.rs  kdf.rs
modules/auth/src/email/: repo.rs  service.rs
modules/auth/src/google/: oauth2.rs  repo.rs  service.rs
modules/auth/src/provider/: google.rs  repo.rs
modules/auth/src/provider/google/: oauth2.rs  service.rs
modules/auth/src/shared/: config.rs  error.rs  jwt.rs  kdf.rs  model.rs
modules/auth/src/token/: repo.rs  service.rs
modules/auth/src/user/: repo.rs  service.rs
modules/base/: Cargo.toml  build.rs
modules/batch-email-bounce/: Cargo.toml
modules/batch-email-send-feedback/: Cargo.toml
modules/batch/api/: Cargo.toml
modules/batch/api/src/: config.rs  main.rs
modules/batch/api/src/config/: app_config.rs
modules/message/: Cargo.toml
modules/message/src/: batch.rs  email.rs
modules/message/src/batch/: email_send.rs
modules/message/src/batch/email_send/: job.rs  request.rs
modules/message/src/batch/email_send/request/: email_confirm_request.rs
modules/message/src/email/: email_request.rs
modules/migration/: Cargo.toml
modules/migration/src/: lib.rs  migrator.rs
modules/migration/src/main/: Migratior.scala
modules/migration/src/main/scala/: Migratior.scala
modules/migration/src/test/: MigratorTest.scala
modules/migration/src/test/scala/: MigratorTest.scala
modules/migration/tests/: migrator.rs
modules/shared/: Cargo.toml
modules/shared/src/message/batch/: email_send.rs
modules/shared/src/message/batch/email_send/: job.rs  message.rs
project/: plugins.sbt
src/: main.rs
(+127 files in other folders)
