[workspace]
members = [
    "./refs/core-rs/modules/base",
    "./refs/core-rs/modules/cloud",
    "./refs/core-rs/modules/image",
    "./refs/core-rs/modules/migration",
    "./refs/core-rs/modules/testkit",

    "./modules/auth",
    "./modules/base",
    "./modules/email-send",
    "./modules/image-convert",

    "./entrypoints/api",
    "./entrypoints/batch-email-send",
    "./entrypoints/batch-email-send-feedback",
    "./entrypoints/batch-image-convert",
]
exclude = ["refs/core-rs"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Lyrise <lyrise1984@gmail.com>"]
version = "0.1.0"

[workspace.dependencies]
core-base = { path = "./refs/core-rs/modules/base" }
core-cloud = { path = "./refs/core-rs/modules/cloud", features = ["aws"] }
core-image = { path = "./refs/core-rs/modules/image" }
core-migration = { path = "./refs/core-rs/modules/migration", features = [
    "postgres",
] }
core-testkit = { path = "./refs/core-rs/modules/testkit" }

opxs-auth = { path = "./modules/auth" }
opxs-base = { path = "./modules/base" }
opxs-email-send = { path = "./modules/email-send" }
opxs-image-convert = { path = "./modules/image-convert" }

lambda_runtime = "0.8.3"
aws_lambda_events = { version = "0.10.0", default-features = false, features = [
    "sns",
    "sqs",
] }
aws-config = "0.56.1"
aws-sdk-secretsmanager = "0.30.0"
aws-sdk-s3 = "0.30.0"
aws-sdk-sqs = "0.30.0"
aws-sdk-sesv2 = "0.30.0"

rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.11.27", features = ["json"] }
anyhow = { version = "1.0.81", features = ["backtrace"] }
async-trait = "0.1.79"
axum = { version = "0.6.7", features = ["macros", "headers", "ws"] }
axum-extra = { version = "0.4.2", features = [
    "cookie",
    "cookie-signed",
    "cookie-private",
] }
chrono = "0.4.37"
config = "0.13.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.115"
testcontainers = "0.14.0"
tokio = { version = "1.23.0", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
sqlx = { version = "0.6.3", features = [
    "postgres",
    "chrono",
    "json",
    "macros",
    "runtime-tokio-rustls",
] }
tower-http = { version = "0.3.5", features = ["cors"] }
utoipa = "3.5.0"
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
ring = "0.17.8"
hex = "0.4.3"
urlencoding = "2.1.3"
hyper = "0.14"
tower = "0.4"
thiserror = "1.0.58"
jsonwebtoken = "8.3.0"
validator = { version = "0.16", features = ["derive"] }
headers = "0.3.9"
once_cell = "1.19.0"
base64 = "0.21.7"
futures = "0.3.30"
futures-util = "0.3.28"
serial_test = "2.0.0"
url = "2.5.0"
kamadak-exif = "0.5.5"
testresult = "0.4.0"
