[workspace]
members = [
    "./refs/core-rs/modules/base",
    "./refs/core-rs/modules/cloud",
    "./refs/core-rs/modules/image",
    "./refs/core-rs/modules/migration",
    "./refs/core-rs/modules/testkit",

    "./modules/auth",
    "./modules/base",
    "./modules/email-send",
    "./modules/file-convert",

    "./entrypoints/api",
    "./entrypoints/batch-email-send",
    "./entrypoints/batch-email-send-feedback",
    "./entrypoints/batch-file-convert",
]
exclude = ["refs/core-rs"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Lyrise <lyrise1984@gmail.com>"]
version = "0.1.0"

[workspace.dependencies]
omnius-core-base = { path = "./refs/core-rs/modules/base" }
omnius-core-cloud = { path = "./refs/core-rs/modules/cloud", features = [
    "aws",
] }
omnius-core-image = { path = "./refs/core-rs/modules/image" }
omnius-core-migration = { path = "./refs/core-rs/modules/migration", features = [
    "postgres",
] }
omnius-core-testkit = { path = "./refs/core-rs/modules/testkit" }

omnius-opxs-auth = { path = "./modules/auth" }
omnius-opxs-base = { path = "./modules/base" }
omnius-opxs-email-send = { path = "./modules/email-send" }
omnius-opxs-file-convert = { path = "./modules/file-convert" }

lambda_runtime = "0.13.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = [
    "sns",
    "sqs",
] }
aws-config = "1.5.11"
aws-sdk-secretsmanager = "1.55.0"
aws-sdk-s3 = "1.66.0"
aws-sdk-sqs = "1.51.0"
aws-sdk-sesv2 = "1.58.0"

gcloud-sdk = { version = "0.25.8", features = [
    "google-cloud-secretmanager-v1",
] }

rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.12.9", features = ["json"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = [
    "cookie",
    "cookie-signed",
    "cookie-private",
    "typed-header",
] }
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.14.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.134"
testcontainers = "0.23.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.2", features = [
    "postgres",
    "chrono",
    "json",
    "macros",
    "runtime-tokio-rustls",
] }
tower-http = { version = "0.6.2", features = ["cors"] }
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
ring = "0.17.8"
hex = "0.4.3"
urlencoding = "2.1.3"
hyper = "1.5"
tower = "0.5"
thiserror = "1.0.69"
jsonwebtoken = "9.3.0"
validator = { version = "0.18", features = ["derive"] }
headers = "0.4.0"
once_cell = "1.20.2"
base64 = "0.22.1"
futures = "0.3.31"
futures-util = "0.3.31"
serial_test = "3.2.0"
url = "2.5.4"
kamadak-exif = "0.5.5"
testresult = "0.4.1"
parking_lot = "0.12.3"
axum-aws-lambda = "0.9.0"
lambda_http = "0.13.0"
http = "1.2.0"
tempfile = "3.14.0"
