[package]
name = "opxs-api"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
build = "build.rs"

[features]
stable-test = []

[dependencies]
core-base = { workspace = true }
core-cloud = { workspace = true }
core-image = { workspace = true }
core-migration = { workspace = true }
core-testkit = { workspace = true }

opxs-shared = { workspace = true }

aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-sesv2 = { workspace = true }

chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
config = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
validator = { workspace = true }
headers = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serial_test = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true }
