[package]
name = "opxs-shared"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
build = "build.rs"

[features]
stable-test = []

[dependencies]
core-base = { workspace = true }
core-cloud = { workspace = true }
core-image = { workspace = true }
core-migration = { workspace = true }
core-testkit = { workspace = true }

sqlx = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
serial_test = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true }
