[package]
name = "pxtv-batch-api"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
migration = { path = "../../migration" }

config = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
